# multiplexobs

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/multiplexobs/: __init__.py  estimation.py  functional.py  loader.py  multiplexobs.py
tests/: test_estimation.py  test_functional.py  test_multiplexobs.py
