[tool.poetry]
name = "multiplexobs"
version = "0.1.0"
description = "Network inference from multiple networks observations with block structures"
authors = ["Saint-Clair Chabert-Liddell"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
