[tool.poetry]
name = "multiplexobs"
version = "0.2.0"
description = "Network inference from multiple networks observations with block structures"
authors = ["Saint-Clair Chabert-Liddell"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.2.0"
numpy = "^1.26.4"
parametrization-cookbook = "^0.18"
tqdm = "^4.66.1"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
jupyter = "^1.0.0"
myst-nb = "^1.0.0"
sphinx-autoapi = "^3.0.0"
sphinx-rtd-theme = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
